// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `null`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    id="article-main"
  >
    <Helmet
      encodeSpecialCharacters={false}
    >
      <title>
        Some Short Headline
      </title>
      <meta
        content="max-image-preview:large"
        name="robots"
      />
      <meta
        content="Some Short Headline"
        name="article:title"
      />
      <meta
        content="The Times"
        name="article:publication"
      />
      <meta
        content="Camilla Long, Environment Editor"
        name="author"
      />
      <meta
        content="Some Short Headline"
        property="og:title"
      />
      <meta
        content="article"
        property="og:type"
      />
      <meta
        content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
        property="og:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        property="og:image"
      />
      <meta
        content="Some Short Headline"
        name="twitter:title"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
        name="twitter:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        name="twitter:image"
      />
      <script
        type="application/ld+json"
      >
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Short Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Camilla Long, Environment Editor"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Short Headline
          </h1>
          <div>
            <ArticleFlags />
          </div>
          <div>
            <div>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {
                            "slug": "camilla-long",
                          },
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Camilla Long",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "author",
                        },
                      ],
                    },
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": ", Environment Editor",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "inline",
                        },
                      ],
                    },
                  ]
                }
                color="#1D1D1B"
              />
            </div>
            <div />
            <div>
              <div>
                <DatePublication
                  date="2015-03-13T18:54:58.000Z"
                  publication="TIMES"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <img
                    alt="Some Caption"
                    fetchpriority="high"
                    src="https://crop169.io?resize=360"
                    srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption
                credits="Some Credits"
                text="Some Caption"
              />
            </figcaption>
          </figure>
        </div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline=""
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <a
                    href="https://www.thetimes.co.uk/puzzles"
                  >
                    <span />
                  </a>
                  <div>
                    <h3>
                      Puzzles
                    </h3>
                    <button
                      size="small"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentcolor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                          fill="currentcolor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <p>
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/crossword"
              >
                <span />
              </a>
              <div>
                <p>
                  Crossword
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/word-puzzles"
              >
                <span />
              </a>
              <div>
                <p>
                  Polygon
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/sudoku"
              >
                <span />
              </a>
              <div>
                <p>
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
          </div>
        </div>
      </div>
      <article>
        <p>
          Some content
        </p>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline=""
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          isCommentEnabled={true}
          isSharingSavingEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "__typename": "StandardSlice",
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;

exports[`4. an article with ads 1`] = `
<div>
  <div
    id="article-marketing-header"
  />
  <article
    data-article-identifier="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
    data-article-sectionname="Some Section"
    id="article-main"
  >
    <Helmet
      encodeSpecialCharacters={false}
    >
      <title>
        Some Headline
      </title>
      <meta
        content="max-image-preview:large"
        name="robots"
      />
      <meta
        content="Some Headline"
        name="article:title"
      />
      <meta
        content="The Times"
        name="article:publication"
      />
      <meta
        content="Camilla Long, Environment Editor"
        name="author"
      />
      <meta
        content="Some Headline"
        property="og:title"
      />
      <meta
        content="article"
        property="og:type"
      />
      <meta
        content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
        property="og:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        property="og:image"
      />
      <meta
        content="Some Headline"
        name="twitter:title"
      />
      <meta
        content="summary_large_image"
        name="twitter:card"
      />
      <meta
        content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
        name="twitter:url"
      />
      <meta
        content="https://crop169.io?resize=1200"
        name="twitter:image"
      />
      <script
        type="application/ld+json"
      >
        {"@context":"https://schema.org","@type":"NewsArticle","headline":"Some Headline","publisher":{"@type":"Organization","name":"The Times","logo":{"@type":"ImageObject"}},"mainEntityOfPage":{"@type":"WebPage","@id":"https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"},"dateCreated":"2015-03-13T18:54:58.000Z","datePublished":"2015-03-13T18:54:58.000Z","isAccessibleForFree":false,"hasPart":{"@type":"WebPageElement","isAccessibleForFree":false,"cssSelector":".undefined"},"image":{"@type":"ImageObject","url":"https://crop169.io?resize=1200","caption":"Some Caption"},"thumbnailUrl":"https://crop169.io","dateModified":"2015-03-13T18:54:58.000Z","author":{"@type":"Person","name":"Camilla Long, Environment Editor"},"articleSection":"Some Section","keywords":"Section:Some Section","articleId":"198c4b2f-ecec-4f34-be53-c89f83bc1b44","url":"https://url.io"}
      </script>
    </Helmet>
    <div>
      <AdContainer
        slotName="header"
      />
    </div>
    <main>
      <div>
        <div>
          <h1
            aria-level="1"
            role="heading"
          >
            Some Headline
          </h1>
          <div>
            <ArticleFlags />
          </div>
          <div>
            <div>
              <ArticleBylineWithLinks
                ast={
                  Array [
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {
                            "slug": "camilla-long",
                          },
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": "Camilla Long",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "author",
                        },
                      ],
                    },
                    Object {
                      "byline": Array [
                        Object {
                          "attributes": Object {},
                          "children": Array [
                            Object {
                              "attributes": Object {
                                "value": ", Environment Editor",
                              },
                              "children": Array [],
                              "name": "text",
                            },
                          ],
                          "name": "inline",
                        },
                      ],
                    },
                  ]
                }
                color="#1D1D1B"
              />
            </div>
            <div />
            <div>
              <div>
                <DatePublication
                  date="2015-03-13T18:54:58.000Z"
                  publication="TIMES"
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          <figure>
            <div>
              <div>
                <div>
                  <img
                    alt="Some Caption"
                    fetchpriority="high"
                    src="https://crop169.io?resize=360"
                    srcSet="https://crop169.io?resize=360 360w,https://crop169.io?resize=520 520w,https://crop169.io?resize=680 680w,https://crop169.io?resize=860 860w,https://crop169.io?resize=1200 1200w,https://crop169.io?resize=1500 1500w"
                  />
                </div>
              </div>
            </div>
            <figcaption>
              <CenteredCaption
                credits="Some Credits"
                text="Some Caption"
              />
            </figcaption>
          </figure>
        </div>
        <div>
          <div
            data-tc-sticky-placeholder={true}
          />
          <div
            data-tc-sticky-container={true}
          >
            <div>
              <div
                data-tc-sticky-sizer={true}
              >
                <SaveAndShareBar
                  articleHeadline="Some Headline"
                  articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
                  articleUrl="https://url.io"
                  savingEnabled={true}
                  sharingEnabled={true}
                />
              </div>
            </div>
          </div>
        </div>
      </div>
      <div>
        <div>
          <div>
            <div>
              <div>
                <div>
                  <a
                    href="https://www.thetimes.co.uk/puzzles"
                  >
                    <span />
                  </a>
                  <div>
                    <h3>
                      Puzzles
                    </h3>
                    <button
                      size="small"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentcolor"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0z"
                          fill="none"
                        />
                        <path
                          d="m12 8-6 6 1.41 1.41L12 10.83l4.59 4.58L18 14z"
                          fill="currentcolor"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
                <p>
                  Challenge yourself with today’s puzzles.
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/crossword"
              >
                <span />
              </a>
              <div>
                <p>
                  Crossword
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/word-puzzles"
              >
                <span />
              </a>
              <div>
                <p>
                  Polygon
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
            <div>
              <div>
                <picture>
                  <div>
                    <div>
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 24 24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M0 0h24v24H0V0z"
                          fill="none"
                        />
                        <path
                          d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm-4.86 8.86l-3 3.87L9 13.14 6 17h12l-3.86-5.14z"
                        />
                      </svg>
                    </div>
                  </div>
                  <img
                    alt="Puzzle thumbnail"
                    src="https://www.thetimes.co.uk/imageserver/image/%2Fpuzzles%2Ficons%2F33b27655-dcc9-421f-906f-b2b10dd26865.png?crop=1250%2C833%2C0%2C0&resize=500"
                    width="40px"
                  />
                </picture>
              </div>
              <a
                href="https://www.thetimes.co.uk/puzzles/sudoku"
              >
                <span />
              </a>
              <div>
                <p>
                  Sudoku
                </p>
              </div>
            </div>
            <hr
              aria-hidden={true}
            />
          </div>
        </div>
      </div>
      <article>
        <div>
          <h2>
            Advertisement
          </h2>
          <AdContainer
            slotName="inline-ad"
          />
        </div>
        <div>
          <h2>
            Sponsored
          </h2>
          <div
            data-parent="group-3"
            id="advert-inarticle-native-1"
          />
          <div
            data-parent="group-3"
            id="advert-inarticle-native-2"
          />
        </div>
        <div
          id="paywall-portal-article-footer"
        />
        <ArticleExtras
          articleHeadline="Some Headline"
          articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
          articleUrl="https://url.io"
          commentsEnabled={true}
          isCommentEnabled={true}
          isSharingSavingEnabled={true}
          publishedTime="2015-03-13T18:54:58.000Z"
          relatedArticleSlice={
            Object {
              "__typename": "StandardSlice",
              "items": Array [
                Object {
                  "article": Object {
                    "__typename": "Article",
                    "bylines": Array [],
                    "hasVideo": false,
                    "headline": "RA Headline",
                    "id": "ra-1",
                    "label": "RA Label",
                    "leadAsset": Object {
                      "__typename": "Image",
                      "crop169": Object {
                        "__typename": "Crop",
                        "url": "https://racrop169.io",
                      },
                      "crop32": Object {
                        "__typename": "Crop",
                        "url": "https://racrop32.io",
                      },
                      "title": "RA Title",
                    },
                    "publicationName": "TIMES",
                    "publishedTime": "2015-03-23T19:39:39.000Z",
                    "savingEnabled": true,
                    "sharingEnabled": true,
                    "shortHeadline": "Headline",
                    "shortIdentifier": "2k629tpvh",
                    "slug": "this-is-slug",
                    "summary105": Array [],
                    "summary125": Array [],
                    "summary145": Array [],
                    "summary160": Array [],
                    "summary175": Array [],
                    "summary225": Array [],
                    "url": "https://ra.io",
                  },
                },
              ],
            }
          }
          relatedArticlesVisible={false}
          savingEnabled={true}
          section="Some Section"
          sharingEnabled={true}
          topics={
            Array [
              Object {
                "name": "Topic",
                "slug": "topic",
              },
            ]
          }
        />
      </article>
    </main>
    <AdContainer
      slotName="pixel"
    />
    <AdContainer
      slotName="pixelteads"
    />
    <AdContainer
      slotName="pixelskin"
    />
  </article>
</div>
`;
